--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
       <artifactId>javafx-fxml</artifactId>
       <version>20-ea+4</version>
     </dependency>
-                                    
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -36,7 +36,13 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>              </dependencies>
+    </dependency>
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>18.0.2</version>
+      </dependency>
+  </dependencies>
 
   <build>
         <plugins>
