Organised the code based on MVC architecture

--- a/config.remember.properties
+++ b/config.remember.properties
@@ -1,4 +1,4 @@
 #Remember Me Configuration
-#Wed May 31 15:14:40 CEST 2023
-password=1234
+#Thu Jun 01 00:56:59 CEST 2023
+password=albina
 username=oltiademi
