Filtered List and some changes

--- a/config.remember.properties
+++ b/config.remember.properties
@@ -1,4 +1,4 @@
 #Remember Me Configuration
-#Thu Jun 01 00:56:59 CEST 2023
-password=albina
+#Thu Jun 01 14:35:15 CEST 2023
+password=1234
 username=oltiademi
