Last changes in MVC architecture

--- a/config.remember.properties
+++ b/config.remember.properties
@@ -1,4 +1,4 @@
 #Remember Me Configuration
-#Thu Jun 01 14:35:15 CEST 2023
-password=1234
-username=oltiademi
+#Thu Jun 01 22:17:59 CEST 2023
+password=admin
+username=admin
